Agregado Campo txtApuesta a Formulario

--- a/BuscaminasCliente/src/View/Principal.form
+++ b/BuscaminasCliente/src/View/Principal.form
@@ -30,15 +30,23 @@
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="txtY" max="32767" attributes="0"/>
-                  <Component id="txtX" max="32767" attributes="0"/>
-                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jButton3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jbtnNuevaPartida" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="txtY" max="32767" attributes="0"/>
+                          <Component id="txtX" max="32767" attributes="0"/>
+                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jButton3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jbtnNuevaPartida" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                      <Component id="txtApuesta" alignment="0" max="32767" attributes="0"/>
+                      <Component id="lblApuesta" alignment="0" max="32767" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace pref="146" max="32767" attributes="0"/>
           </Group>
@@ -69,7 +77,11 @@
                       <Component id="jbtnNuevaPartida" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="82" max="32767" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="lblApuesta" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="txtApuesta" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="24" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -119,6 +131,13 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Tama&#xf1;o"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblApuesta">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Apuesta"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtApuesta">
     </Component>
   </SubComponents>
 </Form>
