--- a/Buscaminas/src/ServidorBuscaminas/View/Principal.form
+++ b/Buscaminas/src/ServidorBuscaminas/View/Principal.form
@@ -98,7 +98,7 @@
     <Component class="javax.swing.JTextField" name="txtX">
       <Properties>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor de Texto"/>
+          <Color id="Default Cursor"/>
         </Property>
         <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
           <ComponentRef name="txtY"/>
