--- a/BuscaminasCliente/src/ClienteBuscaminas/View/TableroView.form
+++ b/BuscaminasCliente/src/ClienteBuscaminas/View/TableroView.form
@@ -84,7 +84,7 @@
             </Property>
             <Property name="autoResizeMode" type="int" value="0"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor de Punto de Mira"/>
+              <Color id="Default Cursor"/>
             </Property>
             <Property name="rowSelectionAllowed" type="boolean" value="false"/>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
