--- a/BuscaminasCliente/src/ClienteBuscaminas/View/Principal.form
+++ b/BuscaminasCliente/src/ClienteBuscaminas/View/Principal.form
@@ -112,7 +112,7 @@
     <Component class="javax.swing.JTextField" name="txtX">
       <Properties>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Default Cursor"/>
+          <Color id="Cursor Por defecto"/>
         </Property>
         <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
           <ComponentRef name="txtY"/>
