--- a/BuscaminasCliente/src/ClienteBuscaminas/View/TableroView.form
+++ b/BuscaminasCliente/src/ClienteBuscaminas/View/TableroView.form
@@ -42,6 +42,10 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" pref="380" max="-2" attributes="0"/>
                   </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="lblNotificacion" min="-2" pref="248" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace pref="32" max="32767" attributes="0"/>
           </Group>
@@ -59,7 +63,9 @@
               </Group>
               <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="228" max="-2" attributes="0"/>
-              <EmptySpace pref="52" max="32767" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="lblNotificacion" pref="23" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -105,6 +111,8 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Monto"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblNotificacion">
     </Component>
   </SubComponents>
 </Form>
